fix header overflow

--- a/hugo/static/css/custom.css
+++ b/hugo/static/css/custom.css
@@ -15,6 +15,10 @@ h1 {
     text-transform: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    overflow-y: hidden;
+}
+
 .edit .box-label {
     background-color: #0C7992 !important;
     color: #000 !important;
